--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "doctrine/dbal": "^2.5",
-        "illuminate/html": "^5.0",
+        "laravelcollective/html" : "5.3",
         "nesbot/carbon": "^1.21",
-        "davejamesmiller/laravel-breadcrumbs": "^3.0"
+        "davejamesmiller/laravel-breadcrumbs": "^3.0",
+        "laravelcollective/html": "^5.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
