--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "license": "ISC",
   "dependencies": {
     "foundation-sites": "^6.3.0-rc2",
-    "motion-ui": "^1.2.2"
+    "laravel-echo": "^1.3.0",
+    "motion-ui": "^1.2.2",
+    "pusher-js": "^4.0.0"
   }
 }
